# tan-studio

./: .dockerignore  .gitignore  .prettierignore  .prettierrc  README.md  package.json  sim-learning.txt  tsconfig.json  turbo.json
.codex/environments/: environment.toml
apps/companion/: package.json  tsconfig.json
apps/companion/migrations/: 0001_initial.sql  0002_roast_brew_workflow.sql  0003_klog_ingestion_safety.sql  0004_profile_ingestion.sql  0005_profile_projection_safety.sql  0006_roast_date_reliability.sql  0007_simplified_core_model.sql  0008_attachments.sql  0009_tan_bridge.sql  0010_roast_date_override.sql  0011_sync_ui_and_profile_images.sql
apps/companion/src/: app.ts  dev.ts  headless-app.ts  headless.ts  index.ts
apps/companion/src/api/: env.ts  http.ts  problem.ts  schemas.ts  security.ts
apps/companion/src/db/: database.ts  migrate.ts  seed-cli.ts  seed.ts
apps/companion/src/device/: device-manager.ts  roaster-session.ts  rust-serial-transport.ts  serial-transport.ts
apps/companion/src/import/: klog-importer.ts
apps/companion/src/repositories/: brew-repository.ts  catalog-repository.ts  label-repository.ts  roast-repository.ts
apps/companion/src/routes/: brew-routes.ts  label-routes.ts  (+2 more)
apps/companion/test/: companion.integration.test.ts  compiled-migration.integration.test.ts  headless-app.test.ts  klog-importer.test.ts  roaster-session.test.ts  serial-bridge-contract.test.ts
apps/desktop/: package.json
apps/desktop/scripts/: build-serial-bridge.ts  build-service.ts  build-sidecar.ts  verify-test-app.ts
apps/desktop/sidecar/: entry.ts  tsconfig.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: companion.rs  lib.rs  main.rs
apps/serial-bridge/: Cargo.toml  package.json
apps/serial-bridge/src/: main.rs
apps/service/: Cargo.toml
apps/service/src/: api.rs  config.rs  contract.rs  core_api.rs  core_contract.rs  db.rs  device.rs  error.rs  klog.rs  kpro.rs  lan_bridge.rs  lib.rs  main.rs  sassi.rs  static_ui.rs  tan_bridge.rs  virtual_nano.rs
apps/web/: .env.development  components.json  index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/web/e2e/: real-nano.smoke.spec.ts  simulated-nano.smoke.spec.ts  tan-studio.smoke.spec.ts
apps/web/public/: site.webmanifest
apps/web/src/: main.tsx  router.tsx  types.ts
deploy/raspberry-pi/: 99-tan-studio-kaffelogic.rules  Dockerfile  README.md  install.sh  tan-studio.service
docs/: 01-current-product-discovery.md  02-usb-protocol-and-file-formats.md  03-product-requirements-document.md  04-technical-specification.md  05-e2e-verification.md  06-wireless-bridge-and-agent-interface.md  07-codex-mcp-test-plan.md  08-atoms3-lite-implementation-handoff.md  09-atoms3-lite-offline-verification.md  10-tan-bridge-native-protocol.md  11-ui-iteration-test-plan.md
firmware/tan-bridge-esp32s3/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/tan-bridge-esp32s3/config/: debug.defaults  release.defaults
firmware/tan-bridge-esp32s3/host-tests/: CMakeLists.txt  generate_fixtures.py  test.h  test_api_contract.py  test_main.c  test_policy.c  test_sassi.c  test_session.c  test_spool.c
firmware/tan-bridge-esp32s3/host-tests/stubs/: esp_err.h
firmware/tan-bridge-esp32s3/main/: CMakeLists.txt  app_main.c  idf_component.yml
firmware/tan-bridge-setup/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/tan-bridge-setup/host-tests/: test_tunnel_policy.c
firmware/tan-bridge-setup/main/: CMakeLists.txt  setup_main.c  tunnel_policy.c  tunnel_policy.h
firmware/usb-role-probe/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/usb-role-probe/main/: CMakeLists.txt  probe.c
mockups/: README.md  generate.mjs  kaffelogic-modern-studio.excalidraw
plugins/tan-studio/: .mcp.json  README.md  package.json  tsconfig.json
plugins/tan-studio/.codex-plugin/: plugin.json
plugins/tan-studio/scripts/: build.ts  e2e.ts  live.ts  smoke.ts
plugins/tan-studio/src/: api.ts  config.ts  gateway.ts  mcp.ts  results.ts  server.ts  units.ts
plugins/tan-studio/tests/: api.test.ts  config.test.ts  mcp.test.ts
script/: build_and_run.sh  build_pi_release.sh  build_tan_bridge_firmware.sh  build_tan_bridge_setup_firmware.sh  build_usb_role_probe.sh  deploy_pi.sh  dev.ts  flash_tan_bridge_setup_firmware.sh  flash_usb_role_probe.sh  generate_tan_bridge_manifest.py  mac_lan.sh  provision_tan_bridge.py  read_tan_bridge_coredump.sh  read_tan_bridge_diagnostics.py  read_usb_role_probe.py  smoke_tan_studio_lan.py  test_bridge_atom_hil.py  test_bridge_no_hardware.sh  test_simulated_nano_e2e.py  test_tan_bridge_host.sh  test_tan_bridge_setup_contract.py  test_tan_bridge_setup_host.sh  update_tan_bridge_diagnostic_firmware.sh  update_tan_bridge_setup_firmware.sh  verify_tan_bridge_setup.py
scripts/: audit-klog-corpus.ts  check-boundaries.ts
(+83 files in other folders)
