[package]
name = "tan-studio-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Local-first HTTP, SQLite and Kaffeelogic USB service for Tan Studio"
license = "MIT"

[dependencies]
axum = { version = "0.8.4", features = ["http1", "json", "macros", "tokio"] }
base64 = "0.22.1"
chrono = { version = "0.4.41", default-features = false, features = ["clock", "serde"] }
constant_time_eq = "0.3.1"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.3.1"
mime_guess = "2.0.5"
parking_lot = "0.12.4"
regex = "1.11.1"
rusqlite = { version = "0.37.0", features = ["bundled", "backup", "functions"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serialport = { version = "4.7.2", default-features = false }
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6.6", features = ["catch-panic", "compression-gzip", "limit", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
uuid = { version = "1.16.0", features = ["serde", "v7"] }

[dev-dependencies]
tempfile = "3.20.0"
tower = { version = "0.5.2", features = ["util"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

